--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -288,13 +288,13 @@ html(lang="en")
 							.form-group
 								p Fecha de nacimiento*
 								.col-xs-12
-									input.selector.form-control(type='text')
+									input.selector2.form-control(type='text')
 								.col-xs-4
-									input#day.form-control(type='text', disabled='')
+									input#day2.form-control(type='text', disabled='')
 								.col-xs-4
-									input#moth.form-control(type='text', disabled='')
+									input#moth2.form-control(type='text', disabled='')
 								.col-xs-4
-									input#year.form-control(type='text', disabled='')
+									input#year2.form-control(type='text', disabled='')
 						.col-md-6
 							.form-group
 								p.label Pais de nacimiento*
@@ -714,7 +714,7 @@ html(lang="en")
 						h4 Meses sin intereses:
 						.radio.text-center
 							label
-								input(type='radio',name='MeseSinIntereses',value='3meses')
+								input(type='radio',checked='true',name='MeseSinIntereses',value='3meses')
 								| 3 Meses
 						.radio.text-center
 							label
