--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -1,3 +1,17 @@
+$azul1:#094FA4;
+$azul2:#006EC1;
+$azul3:#009EE5;
+$azul4:#52BCEC;
+$azul5:#89D1F3;
+$azul6:#B5E5F9;
+
+$gris1:#1A1A1A;
+$gris2:#363636;
+$gris3:#666666;
+$gris4:#CCCCCC;
+$gris5:#D8D8D8;
+$gris6:#F2F2F2;
+
 $stepspanbg:#000;
 $stepspan:blue;
 $steph3:blue;
