--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -66,3 +66,54 @@ $stepactiveh3:red;
 	bottom: 7px;
     right: 10px;
 }
+.triangulo {
+     width: 0; 
+     height: 0; 
+    border-left: 48px solid #fff;
+    border-top: 39px solid transparent;
+    border-bottom: 40px solid transparent;
+    position: absolute;
+    transform: rotate(90deg);
+    top: 308px;
+    left: 166px;
+}
+.regular-radio {
+    display: none;
+}
+
+.regular-radio + label {
+    -webkit-appearance: none;
+    background-color: #fff;
+    border: 2px solid #009ee5;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+    padding: 9px;
+    border-radius: 50px;
+    display: inline-block;
+    position: relative;
+}
+
+.regular-radio:checked + label:after {
+    content: ' ';
+    width: 12px;
+    height: 12px;
+    border-radius: 50px;
+    position: absolute;
+    top: 3px;
+    background: #009ee5;
+    text-shadow: 0px;
+    left: 3px;
+    font-size: 32px;
+}
+
+.regular-radio:checked + label {
+    background-color: #fff;
+    color: #99a1a7;
+    border: 2px solid #009ee5;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1), inset 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.regular-radio + label:active,
+.regular-radio:checked + label:active {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
+	border: 2px solid #009ee5;
+}
