Radio button vida

--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -376,11 +376,11 @@ html(lang="en")
 								.form-inline
 									p ¿Deseas recibir tu póliza en el domicilio registrado?
 									.col-md-2
-										input(type='radio',id="radiopd",name='domicilio',value='no', class="regular-radio",checked='')
+										input(type='radio',id="radiopd",name='domicilio',value='Si', class="regular-radio",checked='')
 										label(for='radiopd')
 										label Si
 									.col-md-2
-										input(type='radio',id="radiopdm",name='domicilio',value='si', class="regular-radio")
+										input(type='radio',id="radiopdm",name='domicilio',value='No', class="regular-radio")
 										label(for='radiopdm')
 										label No
 
