--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -147,10 +147,11 @@ html(lang="en")
 									.triangulo
 									h4  $ 250.00
 									p.label Mensual
-							.col-md-6
+							.col-md-6.sele
+								.triangulo
+									.triangulo2
 								ul.list-group
-									.triangulo
-										.triangulo2
+
 									li.list-group-item
 										span.badge $250.00
 										p.label Pagos subsecuentes 11 pagos de:
